// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonField display invalid message 1`] = `
<FormGroup
  className=""
  color=""
  tag="div"
>
  <div
    className=""
  >
    <FormGroup
      color="danger"
      tag="div"
    >
      <div
        className="controls"
      >
        <Input
          className="form-control-danger"
          id="id-input-2"
          onChange={[Function]}
          rows="6"
          type="textarea"
          value="{}"
        />
        <Errors
          tag={[Function]}
        >
          Invalid JSON : changes will not be saved until the JSON is fixed
        </Errors>
      </div>
    </FormGroup>
  </div>
</FormGroup>
`;

exports[`JsonField should render input 1`] = `
<JsonField
  onChange={[Function]}
  type="text"
  value="value"
>
  <FormGroup
    className=""
    color=""
    tag="div"
  >
    <div
      className="form-group"
      color=""
    >
      <div
        className=""
      >
        <FormGroup
          color=""
          tag="div"
        >
          <div
            className="form-group"
            color=""
          >
            <div
              className="controls"
            >
              <Input
                className=""
                id="id-input-1"
                onChange={[Function]}
                rows="6"
                type="textarea"
                value="\\"value\\""
              >
                <textarea
                  className="form-control"
                  id="id-input-1"
                  onChange={[Function]}
                  rows="6"
                  type="textarea"
                  value="\\"value\\""
                />
              </Input>
            </div>
          </div>
        </FormGroup>
      </div>
    </div>
  </FormGroup>
</JsonField>
`;
